TM-14684 Fix All Assets Filter: The 'X' icon should not overlap the text of the filter

--- a/src/main/webapp/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
+++ b/src/main/webapp/tds/web-app/css/page/module/assetExplorer/asset-explorer-view-grid.component.sass
@@ -18,7 +18,7 @@
               min-height: unset
         .has-feedback
           input.form-control
-            padding: 2px 12px
+            padding: 2px 27px 2px 12px 
             height: unset
           span.form-control-feedback
             line-height: 28px
